# plugify-metamod-loader

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_ru.md  plugify.pconfig.in  plugify.vdf.in
.github/workflows/: cmake-multiple-platform.yml
src/: main.cpp  mm_plugin.cpp
